--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ numpy==2.3.0
 Pillow==11.2.1
 streamlit-calendar==1.3.1
 duckdb==1.3.0
+openai==1.58.1
+azure-identity==1.19.0
+azure-core==1.32.0
+requests==2.32.3
+python-dotenv==1.0.0
