--- a/.github/workflows/main_learywebapp.yml
+++ b/.github/workflows/main_learywebapp.yml
@@ -51,7 +51,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:      - name: Download artifact from build job
+    steps:      
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
