comment out deployment slot

--- a/.github/workflows/main_learywebapp.yml
+++ b/.github/workflows/main_learywebapp.yml
@@ -65,5 +65,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'learywebapp'
-          slot-name: 'Production'
+          # slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0549565EB79B4E678C3D6601EE2E274E }}
